# bookmyshow-clone-backend-django

./: .editorconfig  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
bms_backend/: asgi.py  backends.py  settings.py  urls.py  wsgi.py
core/: admin.py  fields.py  forms.py  manager.py  models.py  schema.py
core/graphql/: mutations.py  queries.py  schema.py  types.py
core/migrations/: 0001_initial.py  0002_alter_user_options_user_usr_email_idx_and_more.py  0003_user_reviewer_type_review_and_more.py  0004_user_profile_image_url.py
meta/: admin.py  constants.py  models.py
meta/graphql/: queries.py  resolvers.py  types.py
meta/migrations/: 0001_initial.py  0002_city_icon_url_alter_artist_profile_pic_url.py
movies/: admin.py  constants.py  models.py  utils.py
movies/graphql/: mutations.py  queries.py  resolvers.py  schema.py  types.py
movies/migrations/: 0001_initial.py  0002_alter_bookingslot_options_and_more.py  0003_alter_movie_options.py  0004_alter_bookingslot_subtitles_lang.py  0005_rename_descriptiom_movie_description.py  0006_alter_slotgroup_slot.py  0007_remove_slotgroup_currency.py  0008_bookingslot_format.py  0009_alter_booking_slot_grp.py  0010_alter_movie_cast_alter_movie_crew_and_more.py  0011_remove_theatre_details.py  0012_alter_screen_screen_id.py  0013_remove_bookingslot_layout_screen_layout.py  0014_alter_screen_screen_id.py  0015_alter_movieformat_format.py  0016_alter_movieformat_format.py  0017_bookingslot_current_layout.py  0018_alter_booking_options_remove_booking_updated_at.py  0019_remove_booking_transaction_id.py  (+2 more)
